<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright (c) 2025, NVIDIA CORPORATION.

  Licensed under the Apache License, Version 2.0 (the "License");
  You may not use this file except in compliance with the License.
  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.nvidia.rapids</groupId>
    <artifactId>ml</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <scala.version>2.13.14</scala.version>
        <scala.binary.version>2.13</scala.binary.version>
        <spark.version>4.0.1-SNAPSHOT</spark.version>
        <protobuf.version>4.29.3</protobuf.version>
        <protoc-jar-maven-plugin.version>3.11.4</protoc-jar-maven-plugin.version>
        <io.grpc.version>1.67.1</io.grpc.version>
        <spark.shade.packageName>org.sparkproject</spark.shade.packageName>
        <!-- Extra JVM arguments for tests (required for Java 17 module system) -->
        <extraJavaTestArgs>
            -XX:+IgnoreUnrecognizedVMOptions
            --add-opens=java.base/java.lang=ALL-UNNAMED
            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
            --add-opens=java.base/java.io=ALL-UNNAMED
            --add-opens=java.base/java.net=ALL-UNNAMED
            --add-opens=java.base/java.nio=ALL-UNNAMED
            --add-opens=java.base/java.util=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
            --add-opens=java.base/sun.security.action=ALL-UNNAMED
            --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
        </extraJavaTestArgs>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-mllib_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-connect_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
        </dependency>

        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- ScalaTest for unit testing -->
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_${scala.binary.version}</artifactId>
            <version>3.2.19</version>
            <scope>test</scope>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.google.protobuf</groupId>-->
<!--            <artifactId>protobuf-java</artifactId>-->
<!--            <version>${protobuf.version}</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.google.protobuf</groupId>-->
<!--            <artifactId>protobuf-java-util</artifactId>-->
<!--            <version>${protobuf.version}</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->

        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-stub</artifactId>
            <version>${io.grpc.version}</version>
        </dependency>

    </dependencies>

    <build>
        <!-- Final name of the built JAR -->
        <finalName>${groupId}.${artifactId}-${version}</finalName>

        <plugins>

            <plugin>
                <groupId>com.github.os72</groupId>
                <artifactId>protoc-jar-maven-plugin</artifactId>
                <version>${protoc-jar-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <protocArtifact>com.google.protobuf:protoc:${protobuf.version}</protocArtifact>
                            <protocVersion>${protobuf.version}</protocVersion>
                            <inputDirectories>
                                <include>src/main/protobuf</include>
                            </inputDirectories>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Scala Maven Plugin (adds Scala sources before compile phase) -->
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>add-source</goal>  <!-- Add Scala source directories -->
                            <goal>compile</goal>     <!-- Compile Scala sources -->
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- ScalaTest Maven Plugin (to run Scala tests) -->
            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
                <configuration>
                    <!-- JVM arguments passed to test process -->
                    <argLine>-ea -Xmx4g -Xss4m ${extraJavaTestArgs}</argLine>
                </configuration>
                <executions>
                    <execution>
                        <id>test</id>
                        <phase>test</phase> <!-- Bind to Maven's test phase -->
                        <goals>
                            <goal>test</goal> <!-- Goal to run ScalaTest tests -->
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Shade all GRPC / Guava / Protobuf dependencies of this build -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <configuration>
                    <shadedArtifactAttached>false</shadedArtifactAttached>
                    <artifactSet>
                        <includes>
                            <include>com.google.guava:*</include>
                            <include>io.grpc:*:</include>
                            <include>com.google.protobuf:*</include>

                            <!--
                              The dependencies below are not added in SBT because SBT add them all
                              as assembly build.
                            -->
                            <include>com.google.android:annotations</include>
                            <include>com.google.api.grpc:proto-google-common-protos</include>
                            <include>io.perfmark:perfmark-api</include>
                            <include>org.codehaus.mojo:animal-sniffer-annotations</include>
                            <include>com.google.errorprone:error_prone_annotations</include>
                            <include>com.google.j2objc:j2objc-annotations</include>
                            <include>org.checkerframework:checker-qual</include>
                            <include>com.google.code.gson:gson</include>
                            <include>org.apache.spark:spark-connect-common_2.12</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>com.google.common</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.guava</shadedPattern>
                            <includes>
                                <include>com.google.common.**</include>
                            </includes>
                        </relocation>
                        <relocation>
                            <pattern>com.google.thirdparty</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.guava</shadedPattern>
                            <includes>
                                <include>com.google.thirdparty.**</include>
                            </includes>
                        </relocation>
                        <relocation>
                            <pattern>com.google.protobuf</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.protobuf</shadedPattern>
                            <includes>
                                <include>com.google.protobuf.**</include>
                            </includes>
                        </relocation>
                        <relocation>
                            <pattern>io.grpc</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.grpc</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>android.annotation</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.android_annotation</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.perfmark</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.io_perfmark</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.codehaus.mojo.animal_sniffer</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.animal_sniffer</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.j2objc.annotations</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.j2objc_annotations</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.errorprone.annotations</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.errorprone_annotations</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.checkerframework</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.checkerframework</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.gson</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.gson</shadedPattern>
                        </relocation>

                        <!--
                          For `com.google.api.grpc:proto-google-common-protos`, do not directly define pattern
                          as `common.google`, otherwise, otherwise, the relocation result may be uncertain due
                          to the change of rule order.
                        -->
                        <relocation>
                            <pattern>com.google.api</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.google_protos.api</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.cloud</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.google_protos.cloud</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.geo</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.google_protos.geo</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.logging</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.google_protos.logging</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.longrunning</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.google_protos.longrunning</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.rpc</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.google_protos.rpc</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.type</pattern>
                            <shadedPattern>${spark.shade.packageName}.connect.google_protos.type</shadedPattern>
                        </relocation>
                    </relocations>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                    </transformers>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Additional repositories (temporary until Spark 4.1 is released) -->
    <repositories>
        <repository>
            <id>apache-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled> <!-- Enable snapshot versions -->
            </snapshots>
            <releases>
                <enabled>false</enabled> <!-- Do not fetch release versions from here -->
            </releases>
        </repository>
    </repositories>
</project>
